# labots

./: .gitignore  CHANGELOG  README  bot.py  botbox.py  config.py  config.yaml  irc.py  ircnumeric.py  labots.py  labots.yaml  pyproject.toml  requirements.txt  setup.py
bots/: bots.yaml  example.json  example.py
labots/: __init__.py  __main__.py  bot.py  botbox.py  cache.py  clogger.py  colorizer.py  irc.py  labots  storage.py
labots/api/: client.py  common.py  server.py
labots/bot/: bot.py  error.py  manager.py
labots/common/: action.py  event.py  message.py  meta.py
labots/config/: checker.py  config.py
labots/irc/: client.py  irc.py  numeric.py  pydle_client.py  wrapper.py
labots/utils/: __init__.py  clogger.py  override.py  singleton.py
scripts/: labots@.service
